# Complete-LLMOPS-RAG-Pipeline

./: .gitignore  main.py  pyproject.toml  requirements.txt
multi_doc_chat/config/: config.yaml
multi_doc_chat/exceptions/: custom_exception.py
multi_doc_chat/logger/: custom_logger.py
multi_doc_chat/src/document_ingestion/: data_ingestion.py
multi_doc_chat/utils/: config_loader.py  document_ops.py  file_io.py  model_loader.py
notebook/: RAG.ipynb  test.py
