[project]
name = "llmops-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt>=0.9",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.3",
    "groq>=0.37.1",
    "huggingface-hub>=1.10.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "pypdf>=6.9.2",
    "python-multipart>=0.0.24",
    "pyyaml>=6.0.3",
    "rapidocr-onnxruntime>=1.4.4",
    "sentence-transformers>=5.4.0",
    "tiktoken>=0.12.0",
]
